--- a/examples/expo/package.json
+++ b/examples/expo/package.json
@@ -9,48 +9,59 @@
     "init-data": "node scripts/initData.js"
   },
   "dependencies": {
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
-    "expo": "~40.0.0",
-    "expo-activity-feed": "link:../../expo-package",
-    "expo-image-picker": "~9.2.0",
-    "expo-linear-gradient": "~8.4.0",
-    "expo-permissions": "~10.0.0",
-    "expo-status-bar": "~1.0.3",
-    "faker": "^4.1.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
+    "es6-symbol": "^3.1.3",
+    "expo": "~48.0.19",
+    "expo-activity-feed": "file:../../expo-package",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-permissions": "~14.1.1",
+    "expo-status-bar": "~1.4.4",
+    "faker": "^6.6.6",
+    "getstream": "^8.1.5",
+    "i18next": "^23.2.6",
+    "immutable": "^4.3.0",
+    "intl-pluralrules": "^2.0.0",
     "numeral": "^2.0.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-activity-feed-core": "link:../..",
-    "react-native-dotenv": "^2.4.3",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
+    "path": "^0.12.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "^0.72.1",
+    "react-native-activity-feed-core": "file:../..",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react-native-screens": "~3.22.0",
+    "react-native-sticky-keyboard-accessory": "^0.1.3",
+    "react-native-web": "~0.19.6",
+    "stream-analytics": "^3.4.4"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@babel/node": "^7.12.10",
+    "@babel/core": "~7.22.5",
+    "@babel/node": "^7.22.5",
+    "@types/react": "^18.2.14",
+    "@types/react-native": "^0.72.2",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.5",
-    "babel-plugin-root-import": "^6.1.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-plugin-root-import": "^6.6.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-expo": "^8.3.0",
-    "dotenv": "^6.0.0",
-    "eslint": "^5.1.0",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-react": "^7.10.0",
-    "jest-expo": "~27.0.0",
-    "prettier": "^1.13.7",
-    "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.3.1"
+    "babel-preset-expo": "^9.3.2",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.44.0",
+    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-react": "^7.32.2",
+    "jest-expo": "~48.0.2",
+    "prettier": "^2.8.8",
+    "react-native-scripts": "2.0.1",
+    "react-test-renderer": "18.2.0"
   },
   "private": true
 }
