--- a/package.json
+++ b/package.json
@@ -13,42 +13,42 @@
     "notification feed"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.0.0",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime-corejs2": "^7.2.0",
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/node": "^7.22.5",
+    "@babel/plugin-external-helpers": "^7.22.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-runtime": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/runtime-corejs2": "^7.22.5",
     "babel-eslint": "^8.2.5",
-    "babel-loader": "^8.0.0-beta.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-i18next-extract": "^0.6.1",
-    "babel-plugin-macros": "^2.5.1",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-react-native-web": "^0.14.10",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-i18next-extract": "^0.9.0",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-react-native-web": "^0.19.6",
     "babel-preset-env": "^7.0.0-beta.3",
     "babel-register": "^7.0.0-beta.3",
-    "cross-env": "^5.1.4",
-    "eslint": "^5.12.1",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-react": "^7.10.0",
-    "faker": "^4.1.0",
-    "file-loader": "^2.0.0",
-    "husky": "^1.3.1",
-    "metro-react-native-babel-preset": "^0.53.1",
-    "prettier": "^1.13.7",
-    "react-art": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-native": "~0.55.2",
-    "react-native-scripts": "1.14.0",
-    "react-native-web": "^0.11.4",
-    "react-styleguidist": "^11.1.5",
-    "react-test-renderer": "16.3.1",
-    "webpack": "^4.17.1"
+    "cross-env": "^7.0.3",
+    "eslint": "^8.44.0",
+    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-react": "^7.32.2",
+    "faker": "^6.6.6",
+    "file-loader": "^6.2.0",
+    "husky": "^8.0.3",
+    "metro-react-native-babel-preset": "^0.76.7",
+    "prettier": "^2.8.8",
+    "react-art": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "~0.72.1",
+    "react-native-scripts": "2.0.1",
+    "react-native-web": "^0.19.6",
+    "react-styleguidist": "^13.1.1",
+    "react-test-renderer": "18.2.0",
+    "webpack": "^5.88.1"
   },
   "main": "./src/index.js",
   "scripts": {
@@ -74,22 +74,22 @@
     }
   },
   "dependencies": {
-    "dayjs": "^1.8.23",
-    "es6-symbol": "^3.1.1",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-markdown": "^1.0.0",
-    "getstream": "~7.2.1",
-    "i18next": "^19.3.4",
-    "immutable": "^4.0.0-rc.9",
-    "mime-types": "^2.1.21",
-    "moment": "^2.22.2",
+    "dayjs": "^1.11.9",
+    "es6-symbol": "^3.1.3",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-markdown": "^3.0.0",
+    "getstream": "~8.1.5",
+    "i18next": "^23.2.6",
+    "immutable": "^4.3.0",
+    "mime-types": "^2.1.35",
+    "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "path": "^0.12.7",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-safe-area-view": "0.9.0",
+    "react-native-safe-area-view": "1.1.1",
     "react-native-sticky-keyboard-accessory": "^0.1.3",
-    "stream-analytics": "^2.7.1",
-    "url-parse": "^1.4.3"
+    "stream-analytics": "^3.4.4",
+    "url-parse": "^1.5.10"
   },
   "peerDependencies": {
     "react": "16.3.1",
